tiny media query bug

--- a/shared/components/SideBar.css
+++ b/shared/components/SideBar.css
@@ -34,7 +34,7 @@
     cursor: pointer;
   }
 }
-@media screen and (min-width: 1200px): {
+@media screen and (min-width: 1200px) {
   .base {
     width: 16.66667%;
   }
